overlapping fix

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -21,7 +21,7 @@
 }
 
 .main-skills .card {
-  width: 25%;
+  flex: 0.3;
   margin: 10px;
   background: #fff;
   text-align: center;
