--- a/static/css/tasks.css
+++ b/static/css/tasks.css
@@ -25,7 +25,7 @@ button i {
 }
 
 .days-card-ctn {
-  width: 100%;
+  flex: 1;
   margin: 10px;
   background: #fff;
   text-align: center;
